# serde_ply

./: CHANGELOG.md  Cargo.toml
src/: lib.rs
src/de/: mod.rs  row.rs  val_reader.rs
src/ser/: header_collector.rs  mod.rs  val_writer.rs
tests/: deserialize.rs  serde_features.rs  serialize.rs
