[package]
name = "serde-ply"
version = "0.2.2"
edition = "2021"
authors = ["Arthur Brussee <arthur.brussee@gmail.com>"]
description = "A Serde-based PLY (Polygon File Format) serializer and deserializer"
license = "Apache-2.0"
repository = "https://github.com/ArthurBrussee/serde_ply"
documentation = "https://docs.rs/serde-ply"
keywords = ["ply", "polygon", "3d", "mesh", "serde"]
categories = ["encoding", "graphics"]
readme = "README.md"
exclude = [".github/", "target/", ".rules"]

[lib]
name = "serde_ply"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
byteorder = "1.4"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "chunked"
harness = false

[[bench]]
name = "splat"
harness = false


[profile.profiling]
inherits = "release"
debug = true
